# DeepAgent-scar

./: Cargo.toml
py_src/: run_deep_agent.py  run_tool_search_server.py
py_src/envs/: alfworld.py  webshop.py
py_src/evaluate/: evaluate_alfworld.py  evaluate_api_bank.py  evaluate_base.py  evaluate_restbench.py  evaluate_toolbench.py  evaluate_webshop.py
py_src/prompts/: prompts_deepagent.py  prompts_react.py  prompts_tooleval.py  prompts_webthinker.py  task_specific_prompts.py
py_src/tools/: api_bank.py  file_process.py  google_search.py  multimodal_tools.py  python_executor.py  rapid_api.py  restbench_api.py  tool_manager.py  tool_search.py  toolhop.py
py_src/utils/: utils.py
src/: agent.rs  config.rs  main.rs  memory.rs  tools.rs
src/env/: alfworld.rs  mod.rs  webshop.rs
